--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@
                                                                                 .sub-header {
                                                                                     height: 50vh;
                                                                                     width: 100%;
-                                                                                    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("https://ibb.co/93m0c2G");
+                                                                                    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("https://i.ibb.co/DgPFzkL/banner2.jpg");
                                                                                     background-position: center;
                                                                                     background-size: cover;
                                                                                     text-align: center;
