--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
                                                                                 .header {
                                                                                     min-height: 100vh;
                                                                                     width: 100%;
-                                                                                    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("https://ibb.co/93m0c2G");
+                                                                                    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("https://ibb.co/yntVFtQ");
                                                                                     background-position: center;
                                                                                     background-size: cover;
                                                                                     position: relative;
@@ -341,9 +341,9 @@
                                                                                 
                                                                                 .icons .fa {
                                                                                     color: #f44336;
-                                                                                    margin: 0 13px;
+                                                                                    margin: 0 auto;
                                                                                     cursor: pointer;
-                                                                                    padding: 18px 0;
+                                                                                    padding: 30px 0;
                                                                                     text-align: center;
                                                                                 }
                                                                                 
@@ -364,7 +364,7 @@
                                                                                 .sub-header {
                                                                                     height: 50vh;
                                                                                     width: 100%;
-                                                                                    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("https://i.ibb.co/DgPFzkL/banner2.jpg");
+                                                                                    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("https://ibb.co/93m0c2G");
                                                                                     background-position: center;
                                                                                     background-size: cover;
                                                                                     text-align: center;
