--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
                                                                                 .header {
                                                                                     min-height: 100vh;
                                                                                     width: 100%;
-                                                                                    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("https://ibb.co/yntVFtQ");
+                                                                                    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url('https://ibb.co/yntVFtQ');
                                                                                     background-position: center;
                                                                                     background-size: cover;
                                                                                     position: relative;
@@ -308,7 +308,7 @@
                                                                                 .cta {
                                                                                     margin: 100px auto;
                                                                                     width: 80%;
-                                                                                    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("https://ibb.co/93m0c2G");
+                                                                                    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://ibb.co/93m0c2G');
                                                                                     background-size: cover;
                                                                                     border-radius: 10px;
                                                                                     text-align: center;
@@ -364,7 +364,7 @@
                                                                                 .sub-header {
                                                                                     height: 50vh;
                                                                                     width: 100%;
-                                                                                    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("https://ibb.co/93m0c2G");
+                                                                                    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url('https://ibb.co/93m0c2G');
                                                                                     background-position: center;
                                                                                     background-size: cover;
                                                                                     text-align: center;
