--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
                                                                                 .header {
                                                                                     min-height: 100vh;
                                                                                     width: 100%;
-                                                                                    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(https://ibb.co/yntVFtQ);
+                                                                                    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url('https://ibb.co/yntVFtQ');
                                                                                     background-position: center;
                                                                                     background-size: cover;
                                                                                     position: relative;
